--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongodb": "^6.19.0",
     "prisma": "^6.14.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
