--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.14",
     "mongodb": "^6.19.0",
+    "multer": "^2.0.2",
+    "nanoid": "^5.1.5",
     "prisma": "^6.14.0",
     "zod": "^4.1.3"
   },
@@ -28,6 +30,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
